# Rust-Zero-to-Hero

./: .gitignore  CONTRIBUTING.md  Cargo-minimal.toml  Cargo.toml  GETTING-STARTED.md  GITHUB-READY.md  LICENSE  README.md
.github/workflows/: ci.yml
docs/: day01-guide.md  day02-guide.md
scripts/: setup-check.sh  test-day01.sh
src/: main.rs
src/day01/: main.rs  mod.rs
src/day01/afternoon/: mod.rs
src/day01/morning/: mod.rs
src/day02/: main.rs  mod.rs
src/day02/afternoon/: mod.rs
src/day02/morning/: mod.rs
src/day03/: main.rs  mod.rs
src/day03/afternoon/: mod.rs
src/day03/morning/: mod.rs
src/day04/: main.rs  mod.rs
src/day04/afternoon/: mod.rs
src/day04/morning/: mod.rs
src/day05/: main.rs  mod.rs
src/day05/afternoon/: mod.rs
src/day05/morning/: mod.rs
