[package]
name = "rust_solana_course"
version = "0.1.0"
edition = "2021"

[dependencies]

# This is the main binary for the entire course
[[bin]]
name = "course"
path = "src/main.rs"

# Individual day binaries
[[bin]]
name = "day01"
path = "src/day01/main.rs"

[[bin]]
name = "day02"
path = "src/day02/main.rs"

[[bin]]
name = "day03"
path = "src/day03/main.rs"

[[bin]]
name = "day04"
path = "src/day04/main.rs"